# elara-mesh

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE-MIT  LICENSING.md  README.md  ROADMAP.md  SECURITY.md  VERIFY.md  build.rs  deny.toml  docker-compose.yml  elara-node.toml.example
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pages.yml  release.yml
benches/: bench_account_smt.rs  bench_auto_scale.rs  bench_committee_selection.rs  bench_crypto.rs  bench_dag.rs  bench_dht.rs  bench_snapshot.rs  bench_staker_aggregates.rs  bench_super_seal.rs  bench_tps.rs  bench_wire.rs  bench_xzone.rs
browser-node/verify-demo/: index.html  sample-mandate-bundles.json  sample-receipt-pins.json  sample-receipt.json  sample-record.json
crates/elara-active-inference/: Cargo.toml  README.md
crates/elara-active-inference/examples/: goal_seeking.rs
crates/elara-active-inference/src/: lib.rs
crates/elara-dht/: Cargo.toml  README.md
crates/elara-dht/examples/: routing.rs
crates/elara-dht/src/: lib.rs
crates/elara-itc/: Cargo.toml  README.md
crates/elara-itc/examples/: causality.rs
crates/elara-itc/src/: lib.rs
crates/elara-light-client/: Cargo.toml  README.md
crates/elara-light-client/examples/: offline_verify.rs
crates/elara-light-client/src/: lib.rs
crates/elara-light-client/tests/: differential_vs_smt.rs
crates/elara-nat/: Cargo.toml  README.md
crates/elara-nat/src/: lib.rs
crates/elara-pq-transport/: Cargo.toml  README.md
crates/elara-pq-transport/examples/: frame_roundtrip.rs
crates/elara-pq-transport/src/: crypto.rs  frame.rs  handshake.rs  kem.rs  lib.rs  sig.rs
crates/elara-record/: Cargo.toml  README.md
crates/elara-record/src/: hash.rs  lib.rs  pqc.rs  pqc_kat.hex  receipt.rs  record.rs  uuid7.rs  wire.rs  zone_id.rs
crates/elara-smt/: Cargo.toml  LICENSE-APACHE  README.md
crates/elara-smt/examples/: proof_verify.rs
crates/elara-smt/src/: lib.rs
crates/elara-verify/: Cargo.toml  README.md
crates/elara-verify/src/: anchor.rs  anchor_proof.rs  cli.rs  grade.rs  lib.rs  mandate.rs  mandate_bundle.rs  seal_record.rs  wasm_api.rs
crates/elara-zone-autoscaler/: Cargo.toml  README.md
crates/elara-zone-autoscaler/examples/: scaling.rs
crates/elara-zone-autoscaler/src/: lib.rs
docs/: AGENT-DELEGATION.md  CONTENT-POSTURE.md  CONTINUITY-PUBLIC.md  EARN-IN-ECONOMY.md  ELARA-VERIFY.md  INSTALL-TROUBLESHOOTING.md  JOIN-DEVNET.md  KNOWN-LIMITATIONS.md  MANDATE-ACT-PERMANENCE.md  MESH-BFT-MERGE-SEMANTICS.md  MULTI-VALIDATOR-EMITTER-AUTH.md  PROTOCOL-ECONOMICS.md  PROTOCOL-SPEC.md  QUICKSTART.md  READ-SIDE-STRATEGY.md  REALMS-SELF-ASSEMBLY.md  api.md
docs/decisions/: README.md
docs/launch/: differentiation-faq.md  how-this-was-built.md
docs/spec/: README.md
docs/whitepaper/: MESH-BFT-PAPER.pdf.ots
examples/: dump_mandate_bundle.rs  dump_record_json.rs  gen_conformance_vectors.rs  light_client_live.rs  mandate_demo.rs  mandate_query_live.rs  pow_timing.rs  pq_probe.rs  seal_enum_soak_driver.rs  tps_bench.rs
examples/verify/: README.md  account-exclusion-proof.json  account-proof.json  btc-header-953657.txt  btc-header-957487.txt  conformance-vectors.json  decode_record.py  epoch-3217-zone-0.json  epoch-3217-zone-0.json.ots  epoch-3217-zone-0.json.qtsr  epoch-3217-zone-0.json.tsr  epoch-41340-zone-0.json  epoch-41340-zone-0.json.ots  epoch-41340-zone-0.json.qtsr  epoch-41340-zone-0.json.tsr  epoch-41340-zone-0.seal.wire  epoch-8219-zone-0.seal.wire  sample-receipt.json  sample-record-TAMPERED.json  sample-record.json  sample-record.wire  verify.sh  verify_btc.py  verify_conformance.py  verify_drand.py  verify_pq.py  zone-0-anchor-pubkey.hex
packaging/appimage/: AppRun  build.sh  elara-node.desktop
packaging/windows/: build.sh  elara-node.nsi
scripts/: build.sh  check-my-join.sh  docker-entrypoint.sh  elara-verify-anchor.sh  elara-verify-record.sh  emergency-dogfood.sh  generate-sbom.sh  harvest-verify-bundle.sh  init-join.sh  install-receipt-hooks.sh  mandate-dogfood.sh  refresh-receipts-snapshot.sh  scan-prod-panics.py  wsl2-join.sh
sdks/github-action/: README.md  action.yml  package.json
sdks/mcp-server/: README.md  package.json  tsconfig.json
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/elara/: __init__.py  agent.py  client.py
sdks/python/tests/: test_agent.py
sdks/typescript/: README.md  package.json  tsconfig.examples.json  tsconfig.json
site/: anim.js  globe.js  how.html  index.html  receipts.html  receipts.json  reveal.js  style.css  usecases.html  writing.html
site/blog/: the-work-layer.html
site/fonts/: LICENSE.txt
site/papers/: ELARA-PROTOCOL-WHITEPAPER.pdf.ots
site/receipts/: 019f48b6-96c6-7281-9bbd-8f30621fdf09.receipt.json  019f48ca-ed85-7601-9eb4-0f5ed3c79294.receipt.json  019f4c4e-fa39-7e10-b29f-01e999951349.receipt.json  019f4c4f-892f-7702-9ef1-f47289eb91df.receipt.json  019f4c54-aee3-74f3-9da3-4f58b85e8a2b.receipt.json  019f4c5c-3c80-7dd0-9611-d8778d5e0ccd.receipt.json  019f4c8c-f642-7282-aac6-90eb5f91923f.receipt.json  019f4c9a-89f7-7ed1-98de-183d842f426f.pins.json  019f4c9a-89f7-7ed1-98de-183d842f426f.receipt.json  019f4e97-9bb3-7191-86c3-1008954e6abd.receipt.json  019f4e98-7ef1-7a43-9152-f7367f034469.receipt.json  (+36 more)
spec/tla/: .gitignore  (+69 more)
src/: anchor_proof.rs  build_invariants.rs  collaboration.rs  conformance.rs  content_safety.rs  continuity.rs  dag.rs  decoder_fuzz.rs  emergency.rs  errors.rs  forgetting.rs  identity.rs  itc.rs  lib.rs  light_verify.rs  mandate.rs  mandate_bundle.rs  mandate_bundle_tests.rs  mandate_sdk.rs  operations.rs  pyo3_sdk.rs  receipt.rs  record.rs  reincarnation.rs  seed_vault.rs  service_install.rs  succession.rs  verify_core.rs  versioning.rs  wire.rs
static/: explorer.html
tests/: account_pq_regression.rs  disk_full.rs  memory_ceiling.rs  record_relay_v1.rs  relay_by_hash.rs  slot_conflict_injection.rs  spec_compliance.rs
tools/: agent_emit.sh
verify-wasm/: .gitignore  Cargo.toml
verify-wasm/src/: lib.rs
(+405 files in other folders)
