[package]
name = "elara-dht"
version = "0.1.0"
edition = "2021"
description = "Lightweight Kademlia DHT for peer discovery and content routing (no key-value storage). Extracted from the Elara Protocol node."
license = "MIT OR Apache-2.0"
repository = "https://github.com/navigatorbuilds/elara-mesh"
readme = "README.md"
keywords = ["kademlia", "dht", "p2p", "peer-discovery"]
categories = ["network-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha3 = "0.10"

[dev-dependencies]
tempfile = "3"
