[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elara"
version = "0.1.0"
description = "Python SDK for the Elara mesh network — read balances, fetch state proofs, submit signed records."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Elara Protocol contributors" }]
keywords = ["elara", "blockchain", "post-quantum", "dilithium", "mesh", "dag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Distributed Computing",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://elara.dev"
Repository = "https://github.com/navigatorbuilds/elara-mesh"

[tool.hatch.build.targets.wheel]
packages = ["elara"]
